# phage-tools

./: .gitignore  LICENSE  README.md  genbank_scraper.py  genbank_scripts.py  gepard.py  mmseqs2.py  pyproject.toml  run_me.command
legacy/: genbank_scripts.py
src/phage_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/phage_tools/classification/: classify_genbank.py  classify_proteins.py  search_proteins.py
src/phage_tools/io/: genbank_io.py
src/phage_tools/modules/: classes.py
src/phage_tools/reports/: fasta.py
