[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phage-tools"
version = "0.1.0"
description = "Helpers for phage genomics analysis"
authors = [{ name = "Dalton Kutzen", email = "daltonkkutzen@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "Bio",
]

[tool.setuptools.packages.find]
where = ["src"]